Remove git submodules.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ set(VKW_USE_VULKAN_LOADER ON CACHE BOOL "Use Vulkan-Loader when dynamic link.")
 set(VKW_USE_INTERNAL_GLFW ON CACHE BOOL "Use Internal GLFW.")
 set(VKW_EXTERNAL_INCLUDE "" CACHE STRING "External include paths.")
 set(VKW_EXTERNAL_LIBRARY "" CACHE STRING "External libraries.")
+set(VKW_THIRD_PARTY_PATH "" CACHE STRING "Third party directory path.")
 
 # Handle flag dependency
 if (NOT VKW_LINK_DYNAMIC_VK OR MSVC OR MINGW OR ANDROID)
@@ -30,6 +31,9 @@ if (NOT VKW_LINK_DYNAMIC_VK OR MSVC OR MINGW OR ANDROID)
 endif()
 if (ANDROID)
     set(VKW_USE_INTERNAL_GLFW OFF)  # No GLFW for Android
+endif()
+if (NOT VKW_THIRD_PARTY_PATH)
+    set(VKW_THIRD_PARTY_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../third_party)
 endif()
 
 # External includes/libraries
@@ -55,10 +59,15 @@ message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
 # Export `compile_commands.json`
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-# cmake modules
+# Cmake modules
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
+# Sanitizers
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/sanitizers)
 find_package(Sanitizers) # Address sanitizer (-DSANITIZE_ADDRESS=ON)
+# FetchContent
+include(FetchContent)
+set(FETCHCONTENT_QUIET TRUE)
+set(FETCHCONTENT_UPDATES_DISCONNECTED TRUE)
 
 # Set output directories
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
@@ -93,63 +102,50 @@ else()
 endif()
 
 # Utility function to setup a target (include, link, warning, sanitizer)
-function(setup_target target includes libs)
+function(setup_target target includes libs is_own)
     target_include_directories(${target} PUBLIC ${includes})
     target_link_libraries(${target} ${libs})
-    set_target_properties(${target} PROPERTIES COMPILE_FLAGS ${warning_options})
-    add_sanitizers(${target})
+    if (${is_own})
+        set_target_properties(${target}
+                              PROPERTIES COMPILE_FLAGS ${warning_options})
+        add_sanitizers(${target})
+    endif()
 endfunction(setup_target)
 
-# Utility function to setup a target simply (include, link)
-function(setup_target_simple target includes libs)
-    target_include_directories(${target} PUBLIC ${includes})
-    target_link_libraries(${target} ${libs})
-endfunction(setup_target_simple)
-
-set(THIRD_PARTY_PATH ${CMAKE_CURRENT_SOURCE_DIR}/third_party)
-
 # Utility function to setup third_party (fetch, subdirectory)
-function(setup_third_party url)
+function(setup_third_party url is_subdirectory)
     get_filename_component(target ${url} NAME)
-    set(path ${THIRD_PARTY_PATH}/${target})
-    include(FetchContent)
-    FetchContent_Declare(${target} GIT_REPOSITORY ${url} SOURCE_DIR ${path})
-    FetchContent_Populate(${target})
-    add_subdirectory(${path})
+    FetchContent_Declare(${target} GIT_REPOSITORY ${url}
+                                   SOURCE_DIR ${VKW_THIRD_PARTY_PATH}/${target})
+    if (${is_subdirectory})
+        FetchContent_MakeAvailable(${target})  # Fetch & subdirectory
+    else()
+        FetchContent_Populate(${target})  # Fetch
+    endif()
 endfunction(setup_third_party)
-
-# Utility function to setup third_party (fetch)
-function(setup_third_party_simple url)
-    get_filename_component(target ${url} NAME)
-    set(path ${THIRD_PARTY_PATH}/${target})
-    include(FetchContent)
-    FetchContent_Declare(${target} GIT_REPOSITORY ${url} SOURCE_DIR ${path})
-    FetchContent_Populate(${target})
-endfunction(setup_third_party_simple)
 
 # ------------------------------------------------------------------------------
 # --------------------------- Third Party Libraries ----------------------------
 # ------------------------------------------------------------------------------
-list(APPEND VKW_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/third_party)
+list(APPEND VKW_INCLUDE ${VKW_THIRD_PARTY_PATH})
 
 if (VKW_LINK_DYNAMIC_VK)
     # Vulkan (Dynamic)
     message(STATUS "Build VKW as dynacmic-vk mode")
-    list(APPEND VKW_INCLUDE
-                ${CMAKE_CURRENT_SOURCE_DIR}/third_party/Vulkan-Headers/include)
+    list(APPEND VKW_INCLUDE ${VKW_THIRD_PARTY_PATH}/Vulkan-Headers/include)
     list(APPEND VKW_DEFINE -DVULKAN_HPP_ENABLE_DYNAMIC_LOADER_TOOL=1  # dlopen
                            -DVULKAN_HPP_DISPATCH_LOADER_DYNAMIC=1)  # dispatch
 
     if (VKW_USE_VULKAN_LOADER)
         # Vulkan-Loader
         message(STATUS "With Vulkan-Loader")
+        setup_third_party("https://github.com/KhronosGroup/Vulkan-Loader" TRUE)
         set(VulkanHeaders_INCLUDE_DIR
-                ${CMAKE_CURRENT_SOURCE_DIR}/third_party/Vulkan-Headers/include
+                ${VKW_THIRD_PARTY_PATH}/Vulkan-Headers/include
                 CACHE INTERNAL "" FORCE)
         set(VulkanRegistry_DIR
-                ${CMAKE_CURRENT_SOURCE_DIR}/third_party/Vulkan-Headers/registry
+                ${VKW_THIRD_PARTY_PATH}/Vulkan-Headers/registry
                 CACHE INTERNAL "" FORCE)
-        add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/third_party/Vulkan-Loader)
     endif()
 else()
     # Vulkan (Static)
@@ -164,17 +160,15 @@ endif()
 # SPIRV-Headers
 set(SPIRV_HEADERS_SKIP_EXAMPLES ON CACHE BOOL "")
 set(SPIRV_HEADERS_SKIP_INSTALL ON CACHE BOOL "")
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/third_party/SPIRV-Headers)
-list(APPEND VKW_INCLUDE
-            ${CMAKE_CURRENT_SOURCE_DIR}/third_party/SPIRV-Headers/include)
+setup_third_party("https://github.com/KhronosGroup/SPIRV-Headers" TRUE)
+list(APPEND VKW_INCLUDE ${VKW_THIRD_PARTY_PATH}/SPIRV-Headers/include)
 
 # SPIRV-Tools
 set(SKIP_SPIRV_TOOLS_INSTALL ON CACHE BOOL "")
 set(SPIRV_SKIP_EXECUTABLES ON CACHE BOOL "")
 # set(SPIRV_CHECK_CONTEXT ON CACHE BOOL "")
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/third_party/SPIRV-Tools)
-list(APPEND VKW_INCLUDE
-            ${CMAKE_CURRENT_SOURCE_DIR}/third_party/SPIRV-Tools/include)
+setup_third_party("https://github.com/KhronosGroup/SPIRV-Tools" TRUE)
+list(APPEND VKW_INCLUDE ${VKW_THIRD_PARTY_PATH}/SPIRV-Tools/include)
 list(APPEND VKW_LIBRARY SPIRV-Tools-opt)  # For "ENABLE_OPT=1" in GLSLang
 
 # GLSLang
@@ -182,8 +176,8 @@ set(ENABLE_GLSLANG_BINARIES ON CACHE BOOL "")
 set(ENABLE_SPVREMAPPER OFF CACHE BOOL "")
 set(ENABLE_HLSL OFF CACHE BOOL "")
 set(SKIP_GLSLANG_INSTALL ON CACHE BOOL "")
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/third_party/glslang)
-list(APPEND VKW_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/third_party/glslang)
+setup_third_party("https://github.com/KhronosGroup/glslang.git" TRUE)
+list(APPEND VKW_INCLUDE ${VKW_THIRD_PARTY_PATH}/glslang)
 list(APPEND VKW_LIBRARY glslang SPIRV glslang-default-resource-limits
                         OGLCompiler)
 list(APPEND VKW_DEFINE -DENABLE_OPT=1)  # Defined internally
@@ -204,30 +198,29 @@ if (VKW_USE_INTERNAL_GLFW)
     set(GLFW_BUILD_TESTS OFF CACHE BOOL "")
     set(GLFW_BUILD_DOCS OFF CACHE BOOL "")
     set(GLFW_INSTALL OFF CACHE BOOL "")
-    setup_third_party("https://github.com/glfw/glfw")
-    list(APPEND VKW_INCLUDE
-                ${CMAKE_CURRENT_SOURCE_DIR}/third_party/glfw/include)
+    setup_third_party("https://github.com/glfw/glfw" TRUE)
+    list(APPEND VKW_INCLUDE ${VKW_THIRD_PARTY_PATH}/glfw/include)
     list(APPEND VKW_LIBRARY glfw)
 endif()
 
 if (VKW_BUILD_EXAMPLES)
     # GLM
-    setup_third_party_simple("https://github.com/g-truc/glm")
-    list(APPEND VKW_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/third_party/glm)
+    setup_third_party("https://github.com/g-truc/glm" FALSE)
+    list(APPEND VKW_INCLUDE ${VKW_THIRD_PARTY_PATH}/glm)
 
     # TinyObjLoader
-    setup_third_party_simple("https://github.com/syoyo/tinyobjloader")
+    setup_third_party("https://github.com/syoyo/tinyobjloader" FALSE)
     add_library(tinyobjloader
-        ${CMAKE_CURRENT_SOURCE_DIR}/third_party/tinyobjloader/tiny_obj_loader.cc
+        ${VKW_THIRD_PARTY_PATH}/tinyobjloader/tiny_obj_loader.cc
     )
     list(APPEND VKW_LIBRARY tinyobjloader)
 
     # STB
-    setup_third_party_simple("https://github.com/nothings/stb")
+    setup_third_party("https://github.com/nothings/stb" FALSE)
     add_library(stb
         ${CMAKE_CURRENT_SOURCE_DIR}/example/utils/stb_impl.cpp
     )
-    setup_target_simple(stb "${VKW_INCLUDE}" "${VKW_LIBRARY}")
+    setup_target(stb "${VKW_INCLUDE}" "${VKW_LIBRARY}" FALSE)
     list(APPEND VKW_LIBRARY stb)
 endif()
 
@@ -239,7 +232,7 @@ list(APPEND VKW_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/include)
 add_library(vkw
     ${CMAKE_CURRENT_SOURCE_DIR}/src/vkw.cpp
 )
-setup_target(vkw "${VKW_INCLUDE}" "${VKW_LIBRARY}")
+setup_target(vkw "${VKW_INCLUDE}" "${VKW_LIBRARY}" TRUE)
 add_definitions(${VKW_DEFINE})
 list(APPEND VKW_LIBRARY vkw)
 
@@ -284,7 +277,7 @@ if (VKW_BUILD_EXAMPLES)
         add_library(native-lib SHARED
             ${EXAMPLE_SOURCES}
             ${CMAKE_CURRENT_SOURCE_DIR}/android/app/src/main/cpp/native-lib.cpp)
-        setup_target(native-lib "${VKW_INCLUDE}" "${VKW_LIBRARY}")
+        setup_target(native-lib "${VKW_INCLUDE}" "${VKW_LIBRARY}" TRUE)
     else()
         # ----------------------------------------------------------------------
         # ------------------------------ Android -------------------------------
@@ -293,6 +286,6 @@ if (VKW_BUILD_EXAMPLES)
         add_executable(main
             ${EXAMPLE_SOURCES}
             ${CMAKE_CURRENT_SOURCE_DIR}/pc/main.cpp)
-        setup_target(main "${VKW_INCLUDE}" "${VKW_LIBRARY}")
+        setup_target(main "${VKW_INCLUDE}" "${VKW_LIBRARY}" TRUE)
     endif()
 endif()
