Fix third_party variable in cmake.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,7 @@ project(vkw CXX C)
 set(CMAKE_CXX_STANDARD 14)  # C++ 14
 
 # Include common configurations
-include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/common.cmake)
+include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/common_setups.cmake)
 
 # ------------------------------------------------------------------------------
 # --------------------------- Third Party Libraries ----------------------------
@@ -57,7 +57,8 @@ if (VKW_LINK_DYNAMIC_VK)
     # Vulkan (Dynamic)
     message(STATUS "Build VKW as dynacmic-vk mode")
     setup_third_party("https://github.com/KhronosGroup/Vulkan-Headers"
-                      "7fe877c90abf00bc71b3c68f49db4c9bb1010411" FALSE)
+                      "7fe877c90abf00bc71b3c68f49db4c9bb1010411" FALSE
+                      ${VKW_THIRD_PARTY_PATH})
     list(APPEND VKW_INCLUDE ${VKW_THIRD_PARTY_PATH}/Vulkan-Headers/include)
     list(APPEND VKW_DEFINE -DVULKAN_HPP_ENABLE_DYNAMIC_LOADER_TOOL=1  # dlopen
                            -DVULKAN_HPP_DISPATCH_LOADER_DYNAMIC=1)  # dispatch
@@ -65,7 +66,8 @@ if (VKW_LINK_DYNAMIC_VK)
     if (VKW_USE_VULKAN_LOADER)
         # Vulkan-Loader
         setup_third_party("https://github.com/KhronosGroup/Vulkan-Loader"
-                          "b83102e3d5b8929c09989e0b879fe6ac5077e013" TRUE)
+                          "b83102e3d5b8929c09989e0b879fe6ac5077e013" TRUE
+                          ${VKW_THIRD_PARTY_PATH})
         set(VulkanHeaders_INCLUDE_DIR
                 ${VKW_THIRD_PARTY_PATH}/Vulkan-Headers/include
                 CACHE INTERNAL "" FORCE)
@@ -87,7 +89,8 @@ endif()
 set(SPIRV_HEADERS_SKIP_EXAMPLES ON CACHE BOOL "")
 set(SPIRV_HEADERS_SKIP_INSTALL ON CACHE BOOL "")
 setup_third_party("https://github.com/KhronosGroup/SPIRV-Headers"
-                  "2e1bc6dcd4ff49ed996dc0174d1aec37c2e9ab59" TRUE)
+                  "2e1bc6dcd4ff49ed996dc0174d1aec37c2e9ab59" TRUE
+                  ${VKW_THIRD_PARTY_PATH})
 list(APPEND VKW_INCLUDE ${VKW_THIRD_PARTY_PATH}/SPIRV-Headers/include)
 
 # SPIRV-Tools
@@ -95,7 +98,8 @@ set(SKIP_SPIRV_TOOLS_INSTALL ON CACHE BOOL "")
 set(SPIRV_SKIP_EXECUTABLES ON CACHE BOOL "")
 # set(SPIRV_CHECK_CONTEXT ON CACHE BOOL "")
 setup_third_party("https://github.com/KhronosGroup/SPIRV-Tools"
-                  "ec1bc3e2e5678f2c72c0d3b196780a17df637d60" TRUE)
+                  "ec1bc3e2e5678f2c72c0d3b196780a17df637d60" TRUE
+                  ${VKW_THIRD_PARTY_PATH})
 list(APPEND VKW_INCLUDE ${VKW_THIRD_PARTY_PATH}/SPIRV-Tools/include)
 list(APPEND VKW_LIBRARY SPIRV-Tools-opt)  # For "ENABLE_OPT=1" in GLSLang
 
@@ -105,7 +109,8 @@ set(ENABLE_SPVREMAPPER OFF CACHE BOOL "")
 set(ENABLE_HLSL OFF CACHE BOOL "")
 set(SKIP_GLSLANG_INSTALL ON CACHE BOOL "")
 setup_third_party("https://github.com/KhronosGroup/glslang.git"
-                  "6bdcb4be344d7903bd92fd464e496c3199b91484" TRUE)
+                  "6bdcb4be344d7903bd92fd464e496c3199b91484" TRUE
+                  ${VKW_THIRD_PARTY_PATH})
 list(APPEND VKW_INCLUDE ${VKW_THIRD_PARTY_PATH}/glslang)
 list(APPEND VKW_LIBRARY glslang SPIRV glslang-default-resource-limits
                         OGLCompiler)
@@ -127,7 +132,8 @@ if (VKW_USE_INTERNAL_GLFW)
     set(GLFW_BUILD_DOCS OFF CACHE BOOL "")
     set(GLFW_INSTALL OFF CACHE BOOL "")
     setup_third_party("https://github.com/glfw/glfw"
-                      "114776a24605418e6d719d2f30141e351e93c6e0" TRUE)
+                      "114776a24605418e6d719d2f30141e351e93c6e0" TRUE
+                      ${VKW_THIRD_PARTY_PATH})
     list(APPEND VKW_INCLUDE ${VKW_THIRD_PARTY_PATH}/glfw/include)
     list(APPEND VKW_LIBRARY glfw)
 endif()
@@ -137,12 +143,14 @@ if (VKW_BUILD_EXAMPLES)
 
     # GLM
     setup_third_party("https://github.com/g-truc/glm"
-                      "66062497b104ca7c297321bd0e970869b1e6ece5" FALSE)
+                      "66062497b104ca7c297321bd0e970869b1e6ece5" FALSE
+                      ${VKW_THIRD_PARTY_PATH})
     list(APPEND VKW_INCLUDE ${VKW_THIRD_PARTY_PATH}/glm)
 
     # TinyObjLoader
     setup_third_party("https://github.com/syoyo/tinyobjloader"
-                      "0ed6c38f20c63b996fbb9fa949569b2acb213a3d" FALSE)
+                      "0ed6c38f20c63b996fbb9fa949569b2acb213a3d" FALSE
+                      ${VKW_THIRD_PARTY_PATH})
     add_library(tinyobjloader
         ${VKW_THIRD_PARTY_PATH}/tinyobjloader/tiny_obj_loader.cc
     )
@@ -150,7 +158,8 @@ if (VKW_BUILD_EXAMPLES)
 
     # STB
     setup_third_party("https://github.com/nothings/stb"
-                      "c9064e317699d2e495f36ba4f9ac037e88ee371a" FALSE)
+                      "c9064e317699d2e495f36ba4f9ac037e88ee371a" FALSE
+                      ${VKW_THIRD_PARTY_PATH})
     add_library(stb
         ${CMAKE_CURRENT_SOURCE_DIR}/example/utils/stb_impl.cpp
     )
