--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 message(STATUS "--------------------------------------------------------------")
-message(STATUS "----------------------------- VKW ----------------------------")
+message(STATUS "-------------------------- Start VKW -------------------------")
 message(STATUS "--------------------------------------------------------------")
 cmake_minimum_required(VERSION 3.10)
 
@@ -232,3 +232,6 @@ if (VKW_BUILD_EXAMPLES)
         setup_target(main "${VKW_INCLUDE}" "${VKW_LIBRARY}" TRUE)
     endif()
 endif()
+message(STATUS "--------------------------------------------------------------")
+message(STATUS "--------------------------------------------------------------")
+message(STATUS "--------------------------------------------------------------")
