--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 message(STATUS "--------------------------------------------------------------")
-message(STATUS "-------------------------- Start VKW -------------------------")
+message(STATUS "-------------------------- Begin VKW -------------------------")
 message(STATUS "--------------------------------------------------------------")
 cmake_minimum_required(VERSION 3.10)
 
@@ -233,5 +233,5 @@ if (VKW_BUILD_EXAMPLES)
     endif()
 endif()
 message(STATUS "--------------------------------------------------------------")
-message(STATUS "--------------------------------------------------------------")
+message(STATUS "--------------------------- End VKW --------------------------")
 message(STATUS "--------------------------------------------------------------")
