--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 29
     defaultConfig {
-        applicationId "com.imailab.vulkanwrapperexample"
+        applicationId "com.takiyu.vulkanwrapperexample"
         minSdkVersion 24
         targetSdkVersion 29
         versionCode 1
