Update csc to 1.0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,8 +52,8 @@ list(APPEND VKW_LIBRARY ${VKW_EXTERNAL_LIBRARY})
 project(vkw CXX C)
 set(CMAKE_CXX_STANDARD 14)  # C++ 14
 
-# Include common configurations
-include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/common_setups.cmake)
+# Include CSC
+include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/cmake_scalable_conf.cmake)
 
 # ------------------------------------------------------------------------------
 # --------------------------- Third Party Libraries ----------------------------
@@ -75,16 +75,16 @@ set(STB_TAG "c9064e317699d2e495f36ba4f9ac037e88ee371a")
 if (VKW_LINK_DYNAMIC_VK)
     # Vulkan (Dynamic)
     message(STATUS "Build VKW as dynacmic-vk mode")
-    setup_third_party("https://github.com/KhronosGroup/Vulkan-Headers"
-                      ${VK_HEADERS_TAG} TRUE ${VKW_THIRD_PARTY_PATH})
+    csc_clone_third_party("https://github.com/KhronosGroup/Vulkan-Headers"
+                          ${VK_HEADERS_TAG} TRUE ${VKW_THIRD_PARTY_PATH})
     list(APPEND VKW_INCLUDE ${VKW_THIRD_PARTY_PATH}/Vulkan-Headers/include)
     list(APPEND VKW_DEFINE -DVULKAN_HPP_ENABLE_DYNAMIC_LOADER_TOOL=1  # dlopen
                            -DVULKAN_HPP_DISPATCH_LOADER_DYNAMIC=1)  # dispatch
 
     if (VKW_USE_VULKAN_LOADER)
         # Vulkan-Loader
-        setup_third_party("https://github.com/KhronosGroup/Vulkan-Loader"
-                          ${VK_LOADER_TAG} TRUE ${VKW_THIRD_PARTY_PATH})
+        csc_clone_third_party("https://github.com/KhronosGroup/Vulkan-Loader"
+                              ${VK_LOADER_TAG} TRUE ${VKW_THIRD_PARTY_PATH})
     endif()
 else()
     # Vulkan (Static)
@@ -99,16 +99,16 @@ endif()
 # SPIRV-Headers
 set(SPIRV_HEADERS_SKIP_EXAMPLES ON CACHE BOOL "")
 set(SPIRV_HEADERS_SKIP_INSTALL ON CACHE BOOL "")
-setup_third_party("https://github.com/KhronosGroup/SPIRV-Headers"
-                  ${SPIRV_HEADERS_TAG} TRUE ${VKW_THIRD_PARTY_PATH})
+csc_clone_third_party("https://github.com/KhronosGroup/SPIRV-Headers"
+                      ${SPIRV_HEADERS_TAG} TRUE ${VKW_THIRD_PARTY_PATH})
 list(APPEND VKW_INCLUDE ${VKW_THIRD_PARTY_PATH}/SPIRV-Headers/include)
 
 # SPIRV-Tools
 set(SKIP_SPIRV_TOOLS_INSTALL ON CACHE BOOL "")
 set(SPIRV_SKIP_EXECUTABLES ON CACHE BOOL "")
 # set(SPIRV_CHECK_CONTEXT ON CACHE BOOL "")
-setup_third_party("https://github.com/KhronosGroup/SPIRV-Tools"
-                  ${SPIRV_TOOLS_TAG} TRUE ${VKW_THIRD_PARTY_PATH})
+csc_clone_third_party("https://github.com/KhronosGroup/SPIRV-Tools"
+                      ${SPIRV_TOOLS_TAG} TRUE ${VKW_THIRD_PARTY_PATH})
 list(APPEND VKW_INCLUDE ${VKW_THIRD_PARTY_PATH}/SPIRV-Tools/include)
 list(APPEND VKW_LIBRARY SPIRV-Tools-opt)  # For "ENABLE_OPT=1" in GLSLang
 # Overwrite for FetchContent variable
@@ -119,8 +119,8 @@ set(ENABLE_GLSLANG_BINARIES ON CACHE BOOL "")
 set(ENABLE_SPVREMAPPER OFF CACHE BOOL "")
 set(ENABLE_HLSL OFF CACHE BOOL "")
 set(SKIP_GLSLANG_INSTALL ON CACHE BOOL "")
-setup_third_party("https://github.com/KhronosGroup/glslang.git"
-                  ${GLSLANG_TAG} TRUE ${VKW_THIRD_PARTY_PATH})
+csc_clone_third_party("https://github.com/KhronosGroup/glslang.git"
+                      ${GLSLANG_TAG} TRUE ${VKW_THIRD_PARTY_PATH})
 list(APPEND VKW_INCLUDE ${VKW_THIRD_PARTY_PATH}/glslang)
 list(APPEND VKW_LIBRARY glslang SPIRV glslang-default-resource-limits
                         OGLCompiler)
@@ -137,8 +137,8 @@ if (VKW_USE_VULKAN_VALIDATION)
     endif()
     set(SPIRV_HEADERS_INCLUDE_DIR
         "${VKW_THIRD_PARTY_PATH}/SPIRV-Headers/include" CACHE STRING "")
-    setup_third_party("https://github.com/KhronosGroup/Vulkan-ValidationLayers"
-                      ${VK_VALIDATION_TAG} TRUE ${VKW_THIRD_PARTY_PATH})
+    csc_clone_third_party("https://github.com/KhronosGroup/Vulkan-ValidationLayers"
+                          ${VK_VALIDATION_TAG} TRUE ${VKW_THIRD_PARTY_PATH})
 endif()
 
 # GLFW
@@ -148,8 +148,8 @@ if (VKW_USE_INTERNAL_GLFW)
     set(GLFW_BUILD_TESTS OFF CACHE BOOL "")
     set(GLFW_BUILD_DOCS OFF CACHE BOOL "")
     set(GLFW_INSTALL OFF CACHE BOOL "")
-    setup_third_party("https://github.com/glfw/glfw"
-                      ${GLFW_TAG} TRUE ${VKW_THIRD_PARTY_PATH})
+    csc_clone_third_party("https://github.com/glfw/glfw"
+                          ${GLFW_TAG} TRUE ${VKW_THIRD_PARTY_PATH})
     list(APPEND VKW_INCLUDE ${VKW_THIRD_PARTY_PATH}/glfw/include)
     list(APPEND VKW_LIBRARY glfw)
 endif()
@@ -158,25 +158,25 @@ if (VKW_BUILD_EXAMPLES)
     message(STATUS "With VKW Examples")
 
     # GLM
-    setup_third_party("https://github.com/g-truc/glm"
-                      ${GLM_TAG} FALSE ${VKW_THIRD_PARTY_PATH})
+    csc_clone_third_party("https://github.com/g-truc/glm"
+                          ${GLM_TAG} FALSE ${VKW_THIRD_PARTY_PATH})
     list(APPEND VKW_INCLUDE ${VKW_THIRD_PARTY_PATH}/glm)
 
     # TinyObjLoader
-    setup_third_party("https://github.com/syoyo/tinyobjloader"
-                      ${TINYOBJ_TAG} FALSE ${VKW_THIRD_PARTY_PATH})
+    csc_clone_third_party("https://github.com/syoyo/tinyobjloader"
+                          ${TINYOBJ_TAG} FALSE ${VKW_THIRD_PARTY_PATH})
     add_library(tinyobjloader
         ${VKW_THIRD_PARTY_PATH}/tinyobjloader/tiny_obj_loader.cc
     )
     list(APPEND VKW_LIBRARY tinyobjloader)
 
     # STB
-    setup_third_party("https://github.com/nothings/stb"
-                      ${STB_TAG} FALSE ${VKW_THIRD_PARTY_PATH})
+    csc_clone_third_party("https://github.com/nothings/stb"
+                          ${STB_TAG} FALSE ${VKW_THIRD_PARTY_PATH})
     add_library(stb
         ${CMAKE_CURRENT_SOURCE_DIR}/example/utils/stb_impl.cpp
     )
-    setup_target(stb "${VKW_INCLUDE}" "${VKW_LIBRARY}" FALSE)
+    csc_setup_target(stb "${VKW_INCLUDE}" "${VKW_LIBRARY}" FALSE)
     list(APPEND VKW_LIBRARY stb)
 endif()
 
@@ -188,7 +188,7 @@ list(APPEND VKW_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/include)
 add_library(vkw
     ${CMAKE_CURRENT_SOURCE_DIR}/src/vkw.cpp
 )
-setup_target(vkw "${VKW_INCLUDE}" "${VKW_LIBRARY}" TRUE)
+csc_setup_target(vkw "${VKW_INCLUDE}" "${VKW_LIBRARY}" TRUE)
 add_definitions(${VKW_DEFINE})
 list(APPEND VKW_LIBRARY vkw)
 
@@ -233,7 +233,7 @@ if (VKW_BUILD_EXAMPLES)
         add_library(native-lib SHARED
             ${EXAMPLE_SOURCES}
             ${CMAKE_CURRENT_SOURCE_DIR}/android/app/src/main/cpp/native-lib.cpp)
-        setup_target(native-lib "${VKW_INCLUDE}" "${VKW_LIBRARY}" TRUE)
+        csc_setup_target(native-lib "${VKW_INCLUDE}" "${VKW_LIBRARY}" TRUE)
     else()
         # ----------------------------------------------------------------------
         # --------------------------------- PC ---------------------------------
@@ -242,7 +242,7 @@ if (VKW_BUILD_EXAMPLES)
         add_executable(main
             ${EXAMPLE_SOURCES}
             ${CMAKE_CURRENT_SOURCE_DIR}/pc/main.cpp)
-        setup_target(main "${VKW_INCLUDE}" "${VKW_LIBRARY}" TRUE)
+        csc_setup_target(main "${VKW_INCLUDE}" "${VKW_LIBRARY}" TRUE)
     endif()
 endif()
 
